--- a/html_home/dz.html
+++ b/html_home/dz.html
@@ -10,6 +10,6 @@
     <h2>Biographia</h2>
     <p>rodilsia v <mark>2007 10</mark> oct v gorode Ust-kamenogorsk, prozhivaet vmeste s roditelemi, <i>uchitsia v 48 shkole</i></p>
     <br>
-    <p>P.S. prosto</p>
+    <p><b>P.S. prosto</b></p>
 </body>
 </html>
