--- a/selectors/dz.html
+++ b/selectors/dz.html
@@ -27,6 +27,8 @@
         <li>five</li>
     </ol>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint ducimus explicabo blanditiis deserunt ex earum, dolorum doloribus velit aut, rerum assumenda! Voluptatum quidem atque blanditiis veritatis! Aliquid, blanditiis fuga.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo provident fugit animi iure qui magnam ab et, sunt reprehenderit officia ex nostrum rerum quisquam repellendus suscipit doloribus accusantium deserunt voluptatum?</p>
+    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo provident fugit animi iure qui magnam ab et, sunt reprehenderit officia ex nostrum rerum quisquam repellendus suscipit doloribus accusantium deserunt voluptatum?</p>
+    <p class="p" id="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint ducimus explicabo blanditiis deserunt ex earum, dolorum doloribus velit aut, rerum assumenda! Voluptatum quidem atque blanditiis veritatis! Aliquid, blanditiis fuga.</p>
+    <p>по приоритетности выше стоит id потом идет class а в конце сам тег</p>
 </body>
 </html>
