--- a/Псевдоклассы в CSS/index.html
+++ b/Псевдоклассы в CSS/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <form action="#">
+        <input type="text">
+        <button>кнопка</button>
+    </form>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla rerum nisi, ea ratione reiciendis cumque iusto eius aut dolorum officiis enim quo error aperiam quod eligendi similique ipsam neque laborum?</p></div>
+        <div class="box"><a href="#">hello</a></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
 </body>
 </html>
