--- a/selectors/dz.html
+++ b/selectors/dz.html
@@ -9,7 +9,7 @@
 <body>
     <h1>что нового</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit neque nulla delectus, facilis quasi laborum, cupiditate tempore quod explicabo est pariatur, nihil itaque at ad. Provident nam minima sequi illo.</p>
-    <h2 id="f2">Rainbow</h2>
+    <h2 id="h2-color-brown">Rainbow</h2>
     <ul>
         <li class="red">red</li>
         <li class="orange">orange</li>
@@ -27,8 +27,8 @@
         <li>five</li>
     </ol>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint ducimus explicabo blanditiis deserunt ex earum, dolorum doloribus velit aut, rerum assumenda! Voluptatum quidem atque blanditiis veritatis! Aliquid, blanditiis fuga.</p>
-    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo provident fugit animi iure qui magnam ab et, sunt reprehenderit officia ex nostrum rerum quisquam repellendus suscipit doloribus accusantium deserunt voluptatum?</p>
-    <p class="p" id="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint ducimus explicabo blanditiis deserunt ex earum, dolorum doloribus velit aut, rerum assumenda! Voluptatum quidem atque blanditiis veritatis! Aliquid, blanditiis fuga.</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo provident fugit animi iure qui magnam ab et, sunt reprehenderit officia ex nostrum rerum quisquam repellendus suscipit doloribus accusantium deserunt voluptatum?</p>
+    <p class="paragraph" id="paragraph-id">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint ducimus explicabo blanditiis deserunt ex earum, dolorum doloribus velit aut, rerum assumenda! Voluptatum quidem atque blanditiis veritatis! Aliquid, blanditiis fuga.</p>
     <p>по приоритетности выше стоит id потом идет class а в конце сам тег</p>
 </body>
 </html>
